# opengl-vulkan-szakgyak

./: README.md  vulkan_structs.md
1_opengl_alapok/1_ablak/: ablak.cpp
1_opengl_alapok/2_haromszog/: CMakeLists.txt  haromszog.cpp
1_opengl_alapok/3_tobb_haromszog/: CMakeLists.txt  haromszogek.cpp
1_opengl_alapok/4_shaderek/: CMakeLists.txt  fragment.glsl  main.cpp  shader.hpp  vertex.glsl
1_opengl_alapok/5_texturak/: CMakeLists.txt  fragment.glsl  main.cpp  shader.hpp  vertex.glsl
1_opengl_alapok/6_transzformacio/: CMakeLists.txt  main.cpp  texture.cpp  texture.hpp  vertex.glsl
1_opengl_alapok/7_koordinatak/: CMakeLists.txt  fragment.glsl  main.cpp  vertex.glsl
1_opengl_alapok/8_kamera/: CMakeLists.txt  main.cpp  shader.hpp
1_opengl_alapok/ablak/: CMakeLists.txt  ablak.cpp
gyakorlo_feladatok/1_glfw_alapok_feladat/: CMakeLists.txt  main.cpp
gyakorlo_feladatok/1_glfw_alapok_megoldas/: CMakeLists.txt  main.cpp
gyakorlo_feladatok/2_haromszog/: main.cpp
gyakorlo_feladatok/2_haromszog_feladat/: CMakeLists.txt  main.cpp
gyakorlo_feladatok/2_haromszog_megoldas/: main.cpp
vulkan_leirasok/: descriptor_usage.md  vertex_input.md
